migration/RC_Deal_Desk_Agent/src/objects/RC_DealDesk_Recommendation__c/RC_DealDesk_Recommendation__c.object-meta.xml
<CustomObject>
    <label>RC_DealDesk Recommendation</label>
    <nameField>
        <displayFormat>RC_DDR-{00000}</displayFormat>
        <label>RC_DealDesk Recommendation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RC_DealDesk Recommendations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>