migration/RC_Deal_Desk_Agent/src/objects/RC_DealDesk_Recommendation__c/fields/RC_Applied__c.field-meta.xml
<CustomField>
    <fullName>RC_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applied</label>
    <type>Checkbox</type>
</CustomField>