migration/RC_Deal_Desk_Agent/src/objects/RC_DealDesk_Recommendation__c/fields/RC_Category__c.field-meta.xml
<CustomField>
    <fullName>RC_Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ARR</fullName>
            </value>
            <value>
                <fullName>MRR</fullName>
            </value>
            <value>
                <fullName>OneTime</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>