migration/RC_Deal_Desk_Agent/src/objects/RC_DealDesk_Recommendation__c/fields/RC_CurrentDiscount__c.field-meta.xml
<CustomField>
    <fullName>RC_CurrentDiscount__c</fullName>
    <label>CurrentDiscount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>