migration/RC_Deal_Desk_Agent/src/objects/RC_DealDesk_Recommendation__c/fields/RC_ProductName__c.field-meta.xml
<CustomField>
    <fullName>RC_ProductName__c</fullName>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>