migration/RC_Deal_Desk_Agent/src/objects/RC_DealDesk_Recommendation__c/fields/RC_Quote__c.field-meta.xml
<CustomField>
    <fullName>RC_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>RC_DealDesk Recommendations</relationshipLabel>
    <relationshipName>RC_DealDesk_Recommendations</relationshipName>
    <type>Lookup</type>
</CustomField>