migration/RC_Deal_Desk_Agent/src/objects/RC_DealDesk_Recommendation__c/fields/RC_QuoteLineItemId__c.field-meta.xml
<CustomField>
    <fullName>RC_QuoteLineItemId__c</fullName>
    <label>QuoteLineItemId</label>
    <length>25</length>
    <type>Text</type>
</CustomField>