migration/RC_Deal_Desk_Agent/src/objects/RC_DealDesk_Recommendation__c/fields/RC_Source__c.field-meta.xml
<CustomField>
    <fullName>RC_Source__c</fullName>
    <label>Source</label>
    <length>55</length>
    <type>Text</type>
</CustomField>